# solana-easy-airdrop

./: .gitignore  Cargo.toml  README.md  airdrop_example.csv  package.json  pnpm-lock.yaml
airdrop-contract/: Anchor.toml  package-lock.json
airdrop-contract/programs/airdrop-contract/: Cargo.toml
airdrop-contract/tests/integration/: airdrop-contract.ts  constants.ts  keypairs.ts
airdrop-contract/tests/utils/: createMintAndFundCreator.ts
cli/: .gitignore  Cargo.toml
cli/src/: main.rs
cli/src/instructions/: claim_airdrop.rs  create_airdrop.rs  deploy_airdrop.rs  mod.rs
cli/tests/: README.md  integration_tests.rs
cli/tests/common/: fixtures.rs  mod.rs  validator.rs
sdk/: package.json  tsconfig.json  vitest.config.ts
sdk/__tests__/fixtures/: cliHelpers.ts  testContext.ts
sdk/__tests__/integration/: claimAirdrop.test.ts  createAirdrop.test.ts  e2e.test.ts
sdk/__tests__/setup/: globalSetup.ts  globalTeardown.ts
sdk/__tests__/unit/: utils.test.ts
sdk/src/: AirdropProgramContext.ts  AirdropProgramProvider.tsx  index.ts  types.ts  useAirdropProgram.ts  useClaimAirdrop.ts  useCreateAirdrop.ts
sdk/src/core/: claimAirdrop.ts  createAirdrop.ts  index.ts  utils.ts
server/: .gitignore  README.md  airdrop.ts  package.json  server.ts
web/: .env.example  README.md  package.json  pnpm-lock.yaml
web/src/: App.css  App.tsx  idl.json  main.tsx  useAirdropProgram.tsx  vite-env.d.ts
web/src/components/: MerkleRootInput.tsx
web/src/contexts/: AirdropProgramContext.ts
web/src/hooks/: useAirdropProgram.ts  useClaimAirdrop.tsx  useCreateAirdrop.tsx
(+14 files in other folders)
