[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
sha2 = "0.10"
anyhow = "1"
hex = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Solana/Anchor dependencies
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-sdk = "2.1"
solana-client = "2.1"

# Local contract dependency for CPI types
airdrop-contract = { path = "../airdrop-contract/programs/airdrop-contract", features = ["cpi"] }
